Manual add fabi’s final slide

--- a/fabi.html
+++ b/fabi.html
@@ -115,7 +115,8 @@
 <img alt="" src="media/fabi/F-Rodina-04.jpg" />
 <img alt="" src="media/fabi/F-Rodina-06.jpg" />
 <img alt="" src="media/fabi/F-Rodina-07.jpg" />
-<img alt="" src="media/fabi/F-Rodina-08.jpg" /></p>
+<img alt="" src="media/fabi/F-Rodina-08.jpg" />
+<img alt="" src="media/fabi/F-Rodina-09.jpg" /></p>
                 </div>
             </div>
         </div>
