Add opengraph meta tags to html files

--- a/404.html
+++ b/404.html
@@ -14,6 +14,16 @@
               href="../static/tmFavicon.png">
 
         <meta name="description" content="Type and Media is a master’s course in typeface design at the Royal Academy of Art in The Hague (KABK).">
+
+        <meta property="og:title" content="Type and Media 2019">
+        <meta property="og:description" content="Type and Media is a master’s course in typeface design at the Royal Academy of Art in The Hague (KABK).">
+        <meta property="og:image" content="https://2019.typemedia.org/static/tmSocialImage.png">
+        <meta property="og:url" content="https://2019.typemedia.org/">
+
+        <meta name="twitter:title" content="Type and Media 2019">
+        <meta name="twitter:description" content="Type and Media is a master’s course in typeface design at the Royal Academy of Art in The Hague (KABK).">
+        <meta name="twitter:image" content="https://2019.typemedia.org/static/tmSocialImage.png">
+        <meta name="twitter:card" content="summary_large_image">
     </head>
     
     <body>
