--- a/alexis.html
+++ b/alexis.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Alexis Boscariol is a Paris-based freelance graphic and type designer. Before attending Type and Media to specialize in type design, he completed his master in graphic design at the ÉSAD Valence. His work revolves around tools, the digital medium, language, typography and a conceptual approach to design. He is available for any work related to type or graphic design.">
 
+        <meta property="og:title" content="Alexis Boscariol — t]m19">
+        <meta property="og:description" content="Alexis Boscariol is a Paris-based freelance graphic and type designer. Before attending Type and Media to specialize in type design, he completed his master in graphic design at the ÉSAD Valence. His work revolves around tools, the digital medium, language, typography and a conceptual approach to design. He is available for any work related to type or graphic design.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/alexis/Picardy-01.png">
+        <meta property="og:url" content="https://2019.typemedia.org/alexis">
+
+        <meta name="twitter:title" content="Alexis Boscariol — t]m19">
+        <meta name="twitter:description" content="Alexis Boscariol is a Paris-based freelance graphic and type designer. Before attending Type and Media to specialize in type design, he completed his master in graphic design at the ÉSAD Valence. His work revolves around tools, the digital medium, language, typography and a conceptual approach to design. He is available for any work related to type or graphic design.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/alexis/Picardy-01.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #8ad4ba;
