--- a/anya.html
+++ b/anya.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Anya Danilova is a type designer from Moscow, currently based in The Hague. She studied at Moscow State University of Printing Arts and worked as a graphic designer at Labs Studio and as a type designer at Bureau Gorbunov. She now works on type-related projects and is always open to new collaborations.">
 
+        <meta property="og:title" content="Anya Danilova — t]m19">
+        <meta property="og:description" content="Anya Danilova is a type designer from Moscow, currently based in The Hague. She studied at Moscow State University of Printing Arts and worked as a graphic designer at Labs Studio and as a type designer at Bureau Gorbunov. She now works on type-related projects and is always open to new collaborations.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/anya/Rezak-00.png">
+        <meta property="og:url" content="https://2019.typemedia.org/anya">
+
+        <meta name="twitter:title" content="Anya Danilova — t]m19">
+        <meta name="twitter:description" content="Anya Danilova is a type designer from Moscow, currently based in The Hague. She studied at Moscow State University of Printing Arts and worked as a graphic designer at Labs Studio and as a type designer at Bureau Gorbunov. She now works on type-related projects and is always open to new collaborations.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/anya/Rezak-00.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #ea1956;
