--- a/celine.html
+++ b/celine.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Céline Odermatt is a Switzerland-based designer. Before Type and Media, she completed her BA in Graphic Design in Lucern and gained several years of working experience as a graphic designer. She also fostered her deep interest in typeface design at various foundries including FontFont, Dinamo and Production Type. Now she splits her time between her independent design practice and working at Lineto.">
 
+        <meta property="og:title" content="Céline Odermatt — t]m19">
+        <meta property="og:description" content="Céline Odermatt is a Switzerland-based designer. Before Type and Media, she completed her BA in Graphic Design in Lucern and gained several years of working experience as a graphic designer. She also fostered her deep interest in typeface design at various foundries including FontFont, Dinamo and Production Type. Now she splits her time between her independent design practice and working at Lineto.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/celine/Coat-03-poster.png">
+        <meta property="og:url" content="https://2019.typemedia.org/celine">
+
+        <meta name="twitter:title" content="Céline Odermatt — t]m19">
+        <meta name="twitter:description" content="Céline Odermatt is a Switzerland-based designer. Before Type and Media, she completed her BA in Graphic Design in Lucern and gained several years of working experience as a graphic designer. She also fostered her deep interest in typeface design at various foundries including FontFont, Dinamo and Production Type. Now she splits her time between her independent design practice and working at Lineto.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/celine/Coat-03-poster.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #f03296;
