--- a/ethan.html
+++ b/ethan.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Ethan is a type designer and calligrapher from New York City. Before moving to Europe, he studied in the Type@Cooper Extended Program, worked at Mucca Design, taught calligraphy and music, and was the Director of Business &amp; Legal Affairs at a record label. Ethan currently works at LucasFonts in Berlin and is available for letter-related projects.">
 
+        <meta property="og:title" content="Ethan Cohen — t]m19">
+        <meta property="og:description" content="Ethan is a type designer and calligrapher from New York City. Before moving to Europe, he studied in the Type@Cooper Extended Program, worked at Mucca Design, taught calligraphy and music, and was the Director of Business &amp; Legal Affairs at a record label. Ethan currently works at LucasFonts in Berlin and is available for letter-related projects.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/ethan/Decibel-01.png">
+        <meta property="og:url" content="https://2019.typemedia.org/ethan">
+
+        <meta name="twitter:title" content="Ethan Cohen — t]m19">
+        <meta name="twitter:description" content="Ethan is a type designer and calligrapher from New York City. Before moving to Europe, he studied in the Type@Cooper Extended Program, worked at Mucca Design, taught calligraphy and music, and was the Director of Business &amp; Legal Affairs at a record label. Ethan currently works at LucasFonts in Berlin and is available for letter-related projects.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/ethan/Decibel-01.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #fe3523;
