--- a/eva.html
+++ b/eva.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Eva Abdulina is a designer from Riga in Latvia. Before studying at Type and Media she obtained a Bachelor of Arts in Visual Communication from Arts University Bournemouth. She finds physicality of type specifically interesting and works with type in urban and interior space.">
 
+        <meta property="og:title" content="Eva Abdulina — t]m19">
+        <meta property="og:description" content="Eva Abdulina is a designer from Riga in Latvia. Before studying at Type and Media she obtained a Bachelor of Arts in Visual Communication from Arts University Bournemouth. She finds physicality of type specifically interesting and works with type in urban and interior space.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/eva/Austra-01.png">
+        <meta property="og:url" content="https://2019.typemedia.org/eva">
+
+        <meta name="twitter:title" content="Eva Abdulina — t]m19">
+        <meta name="twitter:description" content="Eva Abdulina is a designer from Riga in Latvia. Before studying at Type and Media she obtained a Bachelor of Arts in Visual Communication from Arts University Bournemouth. She finds physicality of type specifically interesting and works with type in urban and interior space.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/eva/Austra-01.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #dcdcdc;
