--- a/joona.html
+++ b/joona.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Joona Louhi is a freelance type designer currently based in Helsinki. Before Type and Media, he earned a bachelor’s degree in Packaging and Brand Design from Lahti Institute of Design and worked for several years as a graphic designer with a focus in branding. He is available for custom type design work as well as font production assistance.">
 
+        <meta property="og:title" content="Joona Louhi — t]m19">
+        <meta property="og:description" content="Joona Louhi is a freelance type designer currently based in Helsinki. Before Type and Media, he earned a bachelor’s degree in Packaging and Brand Design from Lahti Institute of Design and worked for several years as a graphic designer with a focus in branding. He is available for custom type design work as well as font production assistance.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/joona/Maneuver-00.png">
+        <meta property="og:url" content="https://2019.typemedia.org/joona">
+
+        <meta name="twitter:title" content="Joona Louhi — t]m19">
+        <meta name="twitter:description" content="Joona Louhi is a freelance type designer currently based in Helsinki. Before Type and Media, he earned a bachelor’s degree in Packaging and Brand Design from Lahti Institute of Design and worked for several years as a graphic designer with a focus in branding. He is available for custom type design work as well as font production assistance.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/joona/Maneuver-00.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #0f5bfa;
