--- a/luke.html
+++ b/luke.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Luke Charsley is a typeface and graphic designer from the UK, working on type-oriented projects. Before graduating from Type and Media, he studied graphic design at Falmouth University and Augsburg University of Applied Science. He has a fascination with type and print history, and naturally, an interest in drawing lettershapes.">
 
+        <meta property="og:title" content="Luke Charsley — t]m19">
+        <meta property="og:description" content="Luke Charsley is a typeface and graphic designer from the UK, working on type-oriented projects. Before graduating from Type and Media, he studied graphic design at Falmouth University and Augsburg University of Applied Science. He has a fascination with type and print history, and naturally, an interest in drawing lettershapes.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/luke/Adorno-0.png">
+        <meta property="og:url" content="https://2019.typemedia.org/luke">
+
+        <meta name="twitter:title" content="Luke Charsley — t]m19">
+        <meta name="twitter:description" content="Luke Charsley is a typeface and graphic designer from the UK, working on type-oriented projects. Before graduating from Type and Media, he studied graphic design at Falmouth University and Augsburg University of Applied Science. He has a fascination with type and print history, and naturally, an interest in drawing lettershapes.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/luke/Adorno-0.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #ea1956;
