--- a/rick.html
+++ b/rick.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Ricard Garcia is a type designer based in Barcelona. In 2015 he received his BA in Graphic Design from the University of Barcelona. Before moving to The Hague to study at Type and Media, he worked at Typerepublic as a type designer. His work is now a balance of type design, lettering &amp; code.">
 
+        <meta property="og:title" content="Ricard Garcia — t]m19">
+        <meta property="og:description" content="Ricard Garcia is a type designer based in Barcelona. In 2015 he received his BA in Graphic Design from the University of Barcelona. Before moving to The Hague to study at Type and Media, he worked at Typerepublic as a type designer. His work is now a balance of type design, lettering &amp; code.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/rick/Prelude-00.png">
+        <meta property="og:url" content="https://2019.typemedia.org/rick">
+
+        <meta name="twitter:title" content="Ricard Garcia — t]m19">
+        <meta name="twitter:description" content="Ricard Garcia is a type designer based in Barcelona. In 2015 he received his BA in Graphic Design from the University of Barcelona. Before moving to The Hague to study at Type and Media, he worked at Typerepublic as a type designer. His work is now a balance of type design, lettering &amp; code.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/rick/Prelude-00.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #00b7b5;
