--- a/rutherford.html
+++ b/rutherford.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Rutherford Craze is a type designer from the UK with a background in both graphic design and programming. After graduating from Type and Media, he interned at Fontsmith in London, before returning to The Hague to establish his own type foundry in early 2020.">
 
+        <meta property="og:title" content="Rutherford Craze — t]m19">
+        <meta property="og:description" content="Rutherford Craze is a type designer from the UK with a background in both graphic design and programming. After graduating from Type and Media, he interned at Fontsmith in London, before returning to The Hague to establish his own type foundry in early 2020.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/rutherford/Greymarch-00.png">
+        <meta property="og:url" content="https://2019.typemedia.org/rutherford">
+
+        <meta name="twitter:title" content="Rutherford Craze — t]m19">
+        <meta name="twitter:description" content="Rutherford Craze is a type designer from the UK with a background in both graphic design and programming. After graduating from Type and Media, he interned at Fontsmith in London, before returning to The Hague to establish his own type foundry in early 2020.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/rutherford/Greymarch-00.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #aaaaaa;
