--- a/ryan.html
+++ b/ryan.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Ryan Bugden is an independent graphic and type designer based in Brooklyn. Before graduating from Type and Media, he received his BFA in Graphic Design from RISD, completed the Type@Cooper Extended Program, and worked as a senior designer at Pentagram and Red Antler. He is now taking on new projects and teaching at his type design course Type Sessions.">
 
+        <meta property="og:title" content="Ryan Bugden — t]m19">
+        <meta property="og:description" content="Ryan Bugden is an independent graphic and type designer based in Brooklyn. Before graduating from Type and Media, he received his BFA in Graphic Design from RISD, completed the Type@Cooper Extended Program, and worked as a senior designer at Pentagram and Red Antler. He is now taking on new projects and teaching at his type design course Type Sessions.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/ryan/Spec-09-poster.png">
+        <meta property="og:url" content="https://2019.typemedia.org/ryan">
+
+        <meta name="twitter:title" content="Ryan Bugden — t]m19">
+        <meta name="twitter:description" content="Ryan Bugden is an independent graphic and type designer based in Brooklyn. Before graduating from Type and Media, he received his BFA in Graphic Design from RISD, completed the Type@Cooper Extended Program, and worked as a senior designer at Pentagram and Red Antler. He is now taking on new projects and teaching at his type design course Type Sessions.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/ryan/Spec-09-poster.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #ffab00;
