--- a/fabi.html
+++ b/fabi.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Fabiola Mejía is an independent type designer based in San José, Costa Rica. Before Type and Media, she completed the Type@Cooper Condensed Program in NYC and worked as a freelance graphic designer and letterer.">
 
+        <meta property="og:title" content="Fabiola Mejía — t]m19">
+        <meta property="og:description" content="Fabiola Mejía is an independent type designer based in San José, Costa Rica. Before Type and Media, she completed the Type@Cooper Condensed Program in NYC and worked as a freelance graphic designer and letterer.">
+        <meta property="og:image" content="https://2019.typemedia.org/media/fabi/Rodina-01.jpg">
+        <meta property="og:url" content="https://2019.typemedia.org/fabi">
+
+        <meta name="twitter:title" content="Fabiola Mejía — t]m19">
+        <meta name="twitter:description" content="Fabiola Mejía is an independent type designer based in San José, Costa Rica. Before Type and Media, she completed the Type@Cooper Condensed Program in NYC and worked as a freelance graphic designer and letterer.">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/fabi/Rodina-01.jpg">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #c3d2e0;
