--- a/mike.html
+++ b/mike.html
@@ -15,6 +15,16 @@
 
         <meta name="description" content="Michelangelo Nigra is a graphic designer, type designer and illustrator based in Turin, Italy. Before honing his skills in type design, he studied graphic design and illustration in Turin. In addition to practicing design on a freelance basis, he teaches at IED (Istituto Europeo Design).">
 
+        <meta property="og:title" content="Michelangelo Nigra — t]m19">
+        <meta property="og:description" content="Michelangelo Nigra is a graphic designer, type designer and illustrator based in Turin, Italy. Before honing his skills in type design, he studied graphic design and illustration in Turin. In addition to practicing design on a freelance basis, he teaches at IED (Istituto Europeo Design).">
+        <meta property="og:image" content="https://2019.typemedia.org/media/mike/Rapida-01.jpg">
+        <meta property="og:url" content="https://2019.typemedia.org/mike">
+
+        <meta name="twitter:title" content="Michelangelo Nigra — t]m19">
+        <meta name="twitter:description" content="Michelangelo Nigra is a graphic designer, type designer and illustrator based in Turin, Italy. Before honing his skills in type design, he studied graphic design and illustration in Turin. In addition to practicing design on a freelance basis, he teaches at IED (Istituto Europeo Design).">
+        <meta name="twitter:image" content="https://2019.typemedia.org/media/mike/Rapida-01.jpg">
+        <meta name="twitter:card" content="summary_large_image">
+
         <style type="text/css">
             :root {
                 --accent: #ff4fff;
